refactor: Adicionando rotas para segunda pagina

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -36,7 +36,7 @@ import relogioicon from "../../assets/relogioicon.svg";
             >
           </li>
           <li>
-            <a href="/servicos" class="hover:text-gray-200 transition-colors"
+            <a href="/QuemSomos" class="hover:text-gray-200 transition-colors"
               >Quem Somos?</a
             >
           </li>
@@ -115,7 +115,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       </li>
       <li>
         <a
-          href="/servicos"
+          href="/QuemSomos"
           class="block py-2 hover:bg-teal-500 px-3 rounded transition-colors"
           >Quem Somos?</a
         >
