--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -9,56 +9,54 @@ import Recepcao1 from '../../assets/ImgsClinica/recepcao1.svg';
 import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 ---
 
-<section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8">
+<section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8 mt-18">
     <DescriptionSection 
     img={IconePlus.src}
     label='QUEM SOMOS'
     title='Conheça a Sallute Clínica Médica'
     />
+    <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
 
-    <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-25 mb-4 w-full text-left">
-        Nossa História
-    </h2>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        A Clínica Sallute nasceu em março de 2016 com um sonho simples, mas poderoso: cuidar de pessoas. Começamos com um único serviço, a fisioterapia, e desde o início já carregávamos conosco o compromisso de oferecer um atendimento humano, acolhedor e de excelência.</p>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        Com o passar do tempo, percebemos que poderíamos ir além. Ampliamos nossa equipe com profissionais de diversas áreas da saúde, sempre com o olhar atento às necessidades dos nossos pacientes e o coração aberto para o cuidado. Investimos em estrutura, conforto e tecnologia, sem nunca abrir mão da essência que nos trouxe até aqui: o carinho em cada detalhe.</p>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        Hoje, somos mais de 20 profissionais atuando em conjunto para oferecer um cuidado integral. Expandimos nossos serviços e agora contamos também com exames de imagem, como ultrassonografia e outros, trazendo ainda mais comodidade e agilidade para quem confia em nosso trabalho.</p>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        Seguimos firmes em nossa missão de crescer com responsabilidade, nos atualizando constantemente, buscando novas formas de acolher e tratar, sem perder o toque humano que nos diferencia. Cada paciente que passa pela Sallute leva um pouco de nós e deixa um pouco de si — e é isso que nos torna uma clínica tão especial.</p>
+        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-15 lg:mt-25 mb-4 w-full text-left">
+            Nossa História</h2>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            A Clínica Sallute nasceu em março de 2016 com um sonho simples, mas poderoso: cuidar de pessoas. Começamos com um único serviço, a fisioterapia, e desde o início já carregávamos conosco o compromisso de oferecer um atendimento humano, acolhedor e de excelência.</p>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            Com o passar do tempo, percebemos que poderíamos ir além. Ampliamos nossa equipe com profissionais de diversas áreas da saúde, sempre com o olhar atento às necessidades dos nossos pacientes e o coração aberto para o cuidado. Investimos em estrutura, conforto e tecnologia, sem nunca abrir mão da essência que nos trouxe até aqui: o carinho em cada detalhe.</p>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            Hoje, somos mais de 20 profissionais atuando em conjunto para oferecer um cuidado integral. Expandimos nossos serviços e agora contamos também com exames de imagem, como ultrassonografia e outros, trazendo ainda mais comodidade e agilidade para quem confia em nosso trabalho.</p>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            Seguimos firmes em nossa missão de crescer com responsabilidade, nos atualizando constantemente, buscando novas formas de acolher e tratar, sem perder o toque humano que nos diferencia. Cada paciente que passa pela Sallute leva um pouco de nós e deixa um pouco de si — e é isso que nos torna uma clínica tão especial.</p>
+                        
+                        
+        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
+            Missão</h2>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            Promover saúde e bem-estar com acolhimento, excelência técnica e atendimento humanizado, oferecendo serviços de qualidade que atendam às necessidades de cada paciente.</p>
+            
 
-
-    <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
-        Missão
-    </h2>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        Promover saúde e bem-estar com acolhimento, excelência técnica e atendimento humanizado, oferecendo serviços de qualidade que atendam às necessidades de cada paciente.</p>
-
-
-    <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
-        Visão
-    </h2>
-    <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
-        Ser referência regional em atendimento multiprofissional e exames de imagem, reconhecida pela ética, inovação e cuidado integral com o ser humano.</p>
-
-
-    <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
-        Valores
-    </h2>
-    <ul class="list-disc pl-5 space-y-1 text-gray-700 text-justify leading-relaxed text-base sm:text-lg lg:text-2xl w-full mb-4">
-        <li>Humanização no atendimento;</li>
-        <li>Compromisso com a saúde;</li>
-        <li>Humanização no atendimento;</li>
-        <li>Compromisso com a saúde;</li>
-        <li>Respeito e empatia;</li>
-        <li>Ética profissional;</li>
-        <li>Qualidade e atualização constante;</li>
-        <li>Trabalho em equipe.</li>
-    </ul>
-
+        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
+            Visão</h2>
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+            Ser referência regional em atendimento multiprofissional e exames de imagem, reconhecida pela ética, inovação e cuidado integral com o ser humano.</p>
+                
+                
+        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
+            Valores</h2>
+        <ul class="list-disc pl-5 space-y-1 text-gray-700 text-justify leading-relaxed text-base sm:text-lg lg:text-2xl w-full mb-4">
+            <li>Humanização no atendimento;</li>
+            <li>Compromisso com a saúde;</li>
+            <li>Humanização no atendimento;</li>
+            <li>Compromisso com a saúde;</li>
+            <li>Respeito e empatia;</li>
+            <li>Ética profissional;</li>
+            <li>Qualidade e atualização constante;</li>
+            <li>Trabalho em equipe.</li>
+        </ul>
+    </div>
 </section>
-
+        
+            
 <section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <DescriptionSection 
         img={IconePlus.src}
@@ -79,7 +77,7 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
         </div>
     </div>
 
-    <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full">
+    <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-5 sm:mt-6 md:mt-7 lg:mt-8">
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
             <img src={Corredor1.src} alt="Imagem Corredor"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
