--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -26,7 +26,7 @@ import relogioicon from "../../assets/relogioicon.svg";
             <a href="/" class="hover:text-gray-200 transition-colors">Início</a>
           </li>
           <li>
-            <a href="/sobre" class="hover:text-gray-200 transition-colors"
+            <a href="/Servicos" class="hover:text-gray-200 transition-colors"
               >Serviços</a
             >
           </li>
@@ -36,7 +36,7 @@ import relogioicon from "../../assets/relogioicon.svg";
             >
           </li>
           <li>
-            <a href="/servicos" class="hover:text-gray-200 transition-colors"
+            <a href="/QuemSomos" class="hover:text-gray-200 transition-colors"
               >Quem Somos?</a
             >
           </li>
@@ -101,7 +101,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       </li>
       <li>
         <a
-          href="/sobre"
+          href="/Servicos"
           class="block py-2 hover:bg-teal-500 px-3 rounded transition-colors"
           >Serviços</a
         >
@@ -115,7 +115,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       </li>
       <li>
         <a
-          href="/servicos"
+          href="/QuemSomos"
           class="block py-2 hover:bg-teal-500 px-3 rounded transition-colors"
           >Quem Somos?</a
         >
