--- a/src/components/QuintaSection.astro
+++ b/src/components/QuintaSection.astro
@@ -1,12 +1,13 @@
 ---
 import Map from "./ui/Map.astro"; 
+import plusIcon from "../assets/plus.svg";
 ---
 
 <section class="flex flex-col items-center w-full py-10 sm:py-16 bg-white">
     <div class="flex flex-col w-full max-w-[360px] sm:max-w-[730px] text-center gap-2 px-6 sm:px-14">
         
         <div class="flex justify-center items-center gap-3">
-            <img src="src/assets/plus.svg" alt="Ícone de mais" class="w-3 sm:w-4">
+            <img src={plusIcon.src} alt="Ícone de mais" class="w-3 sm:w-4">
             <p class="text-xs sm:text-base font-inter font-bold tracking-widest bg-gradient-to-r from-[#37B5A6] to-[#0B7164] bg-clip-text text-transparent">
                 NOSSA LOCALIZAÇÃO
             </p>
