feat: corpo clinico e adicao da rota

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -31,8 +31,9 @@ import relogioicon from "../../assets/relogioicon.svg";
             >
           </li>
           <li>
-            <a href="/contato" class="hover:text-gray-200 transition-colors"
-              >Corpo Clínico</a
+            <a
+              href="/CorpoClinico"
+              class="hover:text-gray-200 transition-colors">Corpo Clínico</a
             >
           </li>
           <li>
@@ -108,7 +109,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       </li>
       <li>
         <a
-          href="/contato"
+          href="/CorpoClinico"
           class="block py-2 hover:bg-teal-500 px-3 rounded transition-colors"
           >Corpo Clínico</a
         >
